add easy-peasy store

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,10 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
     "build": "next build",
-    "start": "next start",
+    "copytypes": "node copyTypes.js",
+    "dev": "next dev",
     "lint": "next lint",
+    "start": "next start",
     "test": "jest",
     "test:watch": "jest --watch"
   },
@@ -16,6 +17,8 @@
     "@mui/icons-material": "^5.15.1",
     "@mui/lab": "^5.0.0-alpha.161",
     "@mui/material": "^5.15.1",
+    "axios": "^1.6.5",
+    "easy-peasy": "^6.0.4",
     "next": "14.0.4",
     "react": "^18",
     "react-dom": "^18",
@@ -24,6 +27,7 @@
     "sass": "^1.69.5"
   },
   "devDependencies": {
+    "@strapi/strapi": "^4.19.0",
     "@testing-library/jest-dom": "^6.1.5",
     "@testing-library/react": "^14.1.2",
     "@testing-library/user-event": "^14.5.1",
