--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -27,7 +27,8 @@
     "**/*.ts",
     "**/*.tsx",
     ".next/types/**/*.ts",
-    "jest.config.js"
+    "jest.config.js",
+    "src/app/page.jsx"
   ],
   "exclude": ["node_modules"]
 }
