code refactoring and remove easy-peasy store

--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -28,7 +28,8 @@
     "**/*.tsx",
     ".next/types/**/*.ts",
     "jest.config.js",
-    "src/app/page.jsx"
+    "src/app/page.jsx",
+    "src/app/products/[id]/page.jsx"
   ],
   "exclude": ["node_modules"]
 }
