--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,12 +17,14 @@
     "@mui/icons-material": "^5.15.1",
     "@mui/lab": "^5.0.0-alpha.161",
     "@mui/material": "^5.15.1",
+    "@reduxjs/toolkit": "^2.2.1",
     "axios": "^1.6.5",
     "next": "14.0.4",
     "react": "^18",
     "react-dom": "^18",
     "react-magnifier": "^3.0.4",
     "react-multi-carousel": "^2.8.4",
+    "react-redux": "^9.1.0",
     "sass": "^1.69.5"
   },
   "devDependencies": {
